--- a/Views/OperatorLists.xaml
+++ b/Views/OperatorLists.xaml
@@ -255,7 +255,7 @@
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             x:Phase="2"
-                            Source="{x:Bind helper:OperatorInfosGetter.GetImage(ImageCodename),Mode=OneWay}"
+                            Source="{x:Bind helper:OperatorInfosGetter.GetImage(ImageCodename)}"
                             Stretch="Uniform" />
 
                         <Grid Grid.Row="2">
