取消可选包

--- a/Views/FrontPage.xaml
+++ b/Views/FrontPage.xaml
@@ -2,10 +2,10 @@
     x:Class="ArknightsToolkit.Views.FrontPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:ArknightsToolkit.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     DataContext="{x:Bind ViewModel}"
     mc:Ignorable="d">
@@ -21,6 +21,7 @@
             <Setter Property="FontSize" Value="40" />
             <Setter Property="Margin" Value="0,0,0,10" />
         </Style>
+        <ui:AttachedDropShadow x:Key="CommonShadow" Offset="0,2" />
     </Page.Resources>
 
     <Grid Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}">
@@ -57,21 +58,21 @@
             Margin="0,0,0,0"
             HorizontalAlignment="Center"
             VerticalAlignment="Top">
-            <controls:DropShadowPanel Margin="0,0,0,5" OffsetY="2">
-                <StackPanel
-                    Width="150"
-                    Padding="5"
+            <StackPanel
+                Width="150"
+                Margin="0,0,0,5"
+                Padding="5"
+                HorizontalAlignment="Center"
+                ui:Effects.Shadow="{StaticResource CommonShadow}"
+                Background="#313131"
+                BorderThickness="1">
+                <TextBlock
                     HorizontalAlignment="Center"
-                    Background="#313131"
-                    BorderThickness="1">
-                    <TextBlock
-                        HorizontalAlignment="Center"
-                        FontSize="10"
-                        FontWeight="Bold"
-                        Foreground="LightGray"
-                        Text="TODAY" />
-                </StackPanel>
-            </controls:DropShadowPanel>
+                    FontSize="10"
+                    FontWeight="Bold"
+                    Foreground="LightGray"
+                    Text="TODAY" />
+            </StackPanel>
 
             <ListView>
                 <ListViewItem HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -97,21 +98,20 @@
             Margin="0,0,0,0"
             HorizontalAlignment="Center"
             VerticalAlignment="Top">
-            <controls:DropShadowPanel OffsetY="2">
-                <StackPanel
-                    Width="150"
-                    Padding="5"
+            <StackPanel
+                Width="150"
+                Padding="5"
+                HorizontalAlignment="Center"
+                ui:Effects.Shadow="{StaticResource CommonShadow}"
+                Background="#313131"
+                BorderThickness="1">
+                <TextBlock
                     HorizontalAlignment="Center"
-                    Background="#313131"
-                    BorderThickness="1">
-                    <TextBlock
-                        HorizontalAlignment="Center"
-                        FontSize="10"
-                        FontWeight="Bold"
-                        Foreground="LightGray"
-                        Text="NEW" />
-                </StackPanel>
-            </controls:DropShadowPanel>
+                    FontSize="10"
+                    FontWeight="Bold"
+                    Foreground="LightGray"
+                    Text="NEW" />
+            </StackPanel>
 
             <ListView>
                 <ListViewItem HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -136,7 +136,10 @@
             Grid.ColumnSpan="2"
             HorizontalAlignment="Center"
             VerticalAlignment="Center">
-            <Button Height="150" Width="150" Command="{x:Bind ViewModel.NavigateToStoryPageCommand}">
+            <Button
+                Width="150"
+                Height="150"
+                Command="{x:Bind ViewModel.NavigateToStoryPageCommand}">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                     <!--<FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE12F;" />-->
                     <Image
@@ -146,14 +149,20 @@
                     <TextBlock Margin="0,10,0,0" Text="查看游戏剧情" />
                 </StackPanel>
             </Button>
-            <Button Height="150" Width="150" Command="{x:Bind ViewModel.NavigateToOperatorsCommand}">
+            <Button
+                Width="150"
+                Height="150"
+                Command="{x:Bind ViewModel.NavigateToOperatorsCommand}">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <FontIcon FontSize="70" FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE13D;" />
+                    <FontIcon
+                        FontFamily="{ThemeResource SymbolThemeFontFamily}"
+                        FontSize="70"
+                        Glyph="&#xE13D;" />
                     <TextBlock Text="查看干员图鉴" />
                 </StackPanel>
             </Button>
         </StackPanel>
-        
+
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="VisualStateGroup">
                 <VisualState x:Name="Default">
