--- a/Views/OperatorDetails.xaml
+++ b/Views/OperatorDetails.xaml
@@ -2,6 +2,7 @@
     x:Class="ArknightsToolkit.Views.OperatorDetails"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helper="using:ArknightsToolkit.Helper"
     xmlns:local="using:ArknightsToolkit.Views"
@@ -24,7 +25,10 @@
             <Setter Property="LineStackingStrategy" Value="MaxHeight" />
             <Setter Property="TextLineBounds" Value="Full" />
         </Style>
-        <Style x:Key="CaptionTextBlockStyle" BasedOn="{StaticResource BaseTextBlockStyle}" TargetType="TextBlock">
+        <Style
+            x:Key="CaptionTextBlockStyle"
+            BasedOn="{StaticResource BaseTextBlockStyle}"
+            TargetType="TextBlock">
             <Setter Property="FontSize" Value="12" />
             <Setter Property="FontWeight" Value="Normal" />
         </Style>
@@ -39,7 +43,10 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="RatingControl">
                         <Grid x:Name="LayoutRoot">
-                            <StackPanel Grid.Row="0" Margin="-20,-20,-20,-20" Orientation="Horizontal">
+                            <StackPanel
+                                Grid.Row="0"
+                                Margin="-20,-20,-20,-20"
+                                Orientation="Horizontal">
                                 <StackPanel
                                     x:Name="RatingBackgroundStackPanel"
                                     Margin="20,20,0,20"
@@ -57,7 +64,10 @@
                                     Text="{TemplateBinding Caption}"
                                     TextLineBounds="TrimToBaseline" />
                             </StackPanel>
-                            <ContentPresenter x:Name="ForegroundContentPresenter" Grid.Row="0" IsHitTestVisible="False">
+                            <ContentPresenter
+                                x:Name="ForegroundContentPresenter"
+                                Grid.Row="0"
+                                IsHitTestVisible="False">
                                 <StackPanel Margin="-40,-40,-40,-40" Orientation="Horizontal">
                                     <StackPanel
                                         x:Name="RatingForegroundStackPanel"
@@ -108,7 +118,10 @@
         <!--#endregion-->
     </Page.Resources>
 
-    <ScrollViewer x:Name="mainScrollViewer" Width="Auto" Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}">
+    <ScrollViewer
+        x:Name="mainScrollViewer"
+        Width="Auto"
+        Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}">
         <Grid Width="Auto" Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -131,11 +144,11 @@
                         </Style>
                     </StackPanel.Resources>
 
-                    <muxc:Expander Padding="0" Header="皮肤描述" Visibility="{x:Bind helper:OperatorInfosGetter.IsSkinInfoDescriptionTextShow(ViewModel.CurrentOperator, OperatorInformationComboBox.SelectedIndex), Mode=OneWay}">
+                    <muxc:Expander Padding="0" Header="立绘描述">
                         <TextBlock
                             Grid.Row="0"
                             Grid.Column="1"
-                            Text="{x:Bind helper:OperatorInfosGetter.GetOperatorSkinInfoDescription(ViewModel.CurrentOperator, OperatorInformationComboBox.SelectedIndex), Mode=OneWay}"
+                            Text="{x:Bind helper:OperatorInfosGetter.GetOperatorSkinInfoDescription(ViewModel.CurrentOperator, OperatorIllustrationsComboBox.SelectedIndex), Mode=OneWay}"
                             TextWrapping="Wrap" />
                     </muxc:Expander>
 
@@ -153,7 +166,10 @@
                                             FontSize="30"
                                             FontWeight="Bold"
                                             Text="{x:Bind Type, Converter={StaticResource OpProfileTypeToStringConverter}}" />
-                                        <RichTextBlock Margin="0,0,0,10" FontWeight="SemiLight" TextWrapping="Wrap">
+                                        <RichTextBlock
+                                            Margin="0,0,0,10"
+                                            FontWeight="SemiLight"
+                                            TextWrapping="Wrap">
                                             <Paragraph>
                                                 <Run Text="{x:Bind Profile}" />
                                             </Paragraph>
@@ -194,7 +210,10 @@
                 </StackPanel>
             </ScrollViewer>
 
-            <Grid x:Name="ContentGrid" Grid.Row="0" Margin="11,5,11,0">
+            <Grid
+                x:Name="ContentGrid"
+                Grid.Row="0"
+                Margin="11,5,11,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -211,13 +230,15 @@
                     HorizontalScrollBarVisibility="Auto"
                     VerticalScrollBarVisibility="Auto"
                     ZoomMode="Enabled">
-                    <Image
+                    <controls:ImageEx
                         x:Name="OperatorImage"
                         Width="500"
                         Height="500"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
-                        Source="{x:Bind helper:OperatorInfosGetter.GetImage(ViewModel.CurrentOperator, OperatorInformationComboBox.SelectedIndex), Mode=OneWay}"
+                        EnableLazyLoading="True"
+                        IsCacheEnabled="True"
+                        Source="{x:Bind helper:OperatorInfosGetter.GetImage(ViewModel.CurrentOperator, OperatorIllustrationsComboBox.SelectedIndex), Mode=OneWay}"
                         Stretch="Uniform" />
                 </ScrollViewer>
 
@@ -234,7 +255,10 @@
                         Style="{StaticResource OperatorRatingControlStyle}"
                         Value="{x:Bind ViewModel.CurrentOperator.Star}" />
 
-                    <StackPanel x:Name="OperatorNameStackPanel" HorizontalAlignment="Left" Orientation="Horizontal">
+                    <StackPanel
+                        x:Name="OperatorNameStackPanel"
+                        HorizontalAlignment="Left"
+                        Orientation="Horizontal">
                         <Border
                             Width="65"
                             Height="65"
@@ -249,7 +273,7 @@
                                 Height="50"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
-                                Source="{x:Bind helper:OperatorInfosGetter.GetClassImage(ViewModel.CurrentOperator, OperatorInformationComboBox.SelectedIndex), Mode=OneWay}" />
+                                Source="{x:Bind helper:OperatorInfosGetter.GetClassImage(ViewModel.CurrentOperator), Mode=OneWay}" />
                         </Border>
 
                         <TextBlock
@@ -259,38 +283,75 @@
                             Style="{StaticResource BaseTextBlockStyle}"
                             Text="{x:Bind ViewModel.CurrentOperator.Name}" />
 
-                        <ComboBox
-                            x:Name="OperatorInformationComboBox"
-                            Width="Auto"
-                            Margin="10,0,0,0"
-                            VerticalAlignment="Center"
-                            ItemsSource="{x:Bind ViewModel.CurrentOperator.Information}"
-                            SelectedIndex="0">
-                            <ComboBox.ItemTemplate>
-                                <DataTemplate x:DataType="models:OperatorInfo">
-                                    <TextBlock Text="{x:Bind helper:OperatorInfosGetter.GetOperatorTypeString(Type, SkinInfo)}" />
-                                </DataTemplate>
-                            </ComboBox.ItemTemplate>
-                        </ComboBox>
-
-                        <Grid Margin="5,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <Grid
+                            Margin="5,0,0,0"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
                             <Grid.RowDefinitions>
                                 <RowDefinition />
                                 <RowDefinition />
                             </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
+
                             <Grid.Resources>
                                 <Style BasedOn="{StaticResource BaseTextBlockStyle}" TargetType="TextBlock" />
                             </Grid.Resources>
 
-                            <TextBlock Grid.Row="0" Grid.Column="0" Text="画师:" />
-                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{x:Bind helper:OperatorInfosGetter.GetIllustrator(ViewModel.CurrentOperator, OperatorInformationComboBox.SelectedIndex), Mode=OneWay}" />
-                            <TextBlock Grid.Row="1" Grid.Column="0" Text="配音:" />
-                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{x:Bind helper:OperatorInfosGetter.GetForeignCV(ViewModel.CurrentOperator, OperatorInformationComboBox.SelectedIndex), Mode=OneWay}" />
+                            <StackPanel
+                                Grid.Row="0"
+                                Margin="0,10,0,0"
+                                HorizontalAlignment="Left"
+                                Orientation="Horizontal">
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="画师:" />
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="{x:Bind helper:OperatorInfosGetter.GetIllustrator(ViewModel.CurrentOperator, OperatorIllustrationsComboBox.SelectedIndex), Mode=OneWay}" />
+                            </StackPanel>
+
+                            <StackPanel
+                                Grid.Row="1"
+                                HorizontalAlignment="Left"
+                                Orientation="Horizontal">
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="配音:" />
+                                <ComboBox
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Background="Transparent"
+                                    ItemsSource="{x:Bind ViewModel.CurrentOperator.Voices, Mode=OneWay}"
+                                    SelectedIndex="0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate x:DataType="models:OperatorVoiceInfo">
+                                            <TextBlock HorizontalAlignment="Left" Style="{StaticResource BaseTextBlockStyle}">
+                                                <Run Text="{x:Bind Voice}" />
+                                                <Run Text="(" />
+                                                <Run Text="{x:Bind Type, Converter={StaticResource OpVocalTypeToStringConverter}}" />
+                                                <Run Text=")" />
+                                            </TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
                         </Grid>
+
+                        <ComboBox
+                            x:Name="OperatorIllustrationsComboBox"
+                            Width="Auto"
+                            Margin="10,0,0,0"
+                            VerticalAlignment="Center"
+                            ItemsSource="{x:Bind ViewModel.CurrentOperator.Illustrations}"
+                            SelectedIndex="0">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate x:DataType="models:OperatorIllustrationInfo">
+                                    <TextBlock Text="{x:Bind helper:OperatorInfosGetter.GetOperatorTypeString(Type, IllustrationName)}" />
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
                     </StackPanel>
                 </StackPanel>
 
