--- a/Views/OperatorLists.xaml
+++ b/Views/OperatorLists.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helper="using:ArknightsToolkit.Helper"
     xmlns:local="using:ArknightsToolkit.Views"
@@ -24,7 +25,10 @@
             <Setter Property="LineStackingStrategy" Value="MaxHeight" />
             <Setter Property="TextLineBounds" Value="Full" />
         </Style>
-        <Style x:Key="CaptionTextBlockStyle" BasedOn="{StaticResource BaseTextBlockStyle}" TargetType="TextBlock">
+        <Style
+            x:Key="CaptionTextBlockStyle"
+            BasedOn="{StaticResource BaseTextBlockStyle}"
+            TargetType="TextBlock">
             <Setter Property="FontSize" Value="12" />
             <Setter Property="FontWeight" Value="Normal" />
         </Style>
@@ -39,7 +43,10 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="RatingControl">
                         <Grid x:Name="LayoutRoot">
-                            <StackPanel Grid.Row="0" Margin="-20,-20,-20,-20" Orientation="Horizontal">
+                            <StackPanel
+                                Grid.Row="0"
+                                Margin="-20,-20,-20,-20"
+                                Orientation="Horizontal">
                                 <StackPanel
                                     x:Name="RatingBackgroundStackPanel"
                                     Margin="20,20,0,20"
@@ -57,7 +64,10 @@
                                     Text="{TemplateBinding Caption}"
                                     TextLineBounds="TrimToBaseline" />
                             </StackPanel>
-                            <ContentPresenter x:Name="ForegroundContentPresenter" Grid.Row="0" IsHitTestVisible="False">
+                            <ContentPresenter
+                                x:Name="ForegroundContentPresenter"
+                                Grid.Row="0"
+                                IsHitTestVisible="False">
                                 <StackPanel Margin="-40,-40,-40,-40" Orientation="Horizontal">
                                     <StackPanel
                                         x:Name="RatingForegroundStackPanel"
@@ -110,7 +120,10 @@
 
     <Grid RequestedTheme="Dark">
         <Grid.Background>
-            <ImageBrush ImageSource="{x:Bind ViewModel.BackgroundImage, Mode=OneWay}" Opacity="0.6" Stretch="UniformToFill" />
+            <ImageBrush
+                ImageSource="{x:Bind ViewModel.BackgroundImage, Mode=OneWay}"
+                Opacity="0.6"
+                Stretch="UniformToFill" />
         </Grid.Background>
 
         <Grid.RowDefinitions>
@@ -183,7 +196,10 @@
                     CommandParameter="{StaticResource SortUp}"
                     Icon="Up"
                     Label="名称升序" />
-                <AppBarButton Command="{x:Bind ViewModel.CompareByName, Mode=OneWay}" CommandParameter="{StaticResource SortReverse}" Label="名称降序">
+                <AppBarButton
+                    Command="{x:Bind ViewModel.CompareByName, Mode=OneWay}"
+                    CommandParameter="{StaticResource SortReverse}"
+                    Label="名称降序">
                     <AppBarButton.Icon>
                         <FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE74B;" />
                     </AppBarButton.Icon>
@@ -196,7 +212,10 @@
                     CommandParameter="{StaticResource SortUp}"
                     Icon="Up"
                     Label="稀有度升序" />
-                <AppBarButton Command="{x:Bind ViewModel.CompareByStarCount, Mode=OneWay}" CommandParameter="{StaticResource SortReverse}" Label="稀有度降序">
+                <AppBarButton
+                    Command="{x:Bind ViewModel.CompareByStarCount, Mode=OneWay}"
+                    CommandParameter="{StaticResource SortReverse}"
+                    Label="稀有度降序">
                     <AppBarButton.Icon>
                         <FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE74B;" />
                     </AppBarButton.Icon>
@@ -219,14 +238,14 @@
             Grid.Row="2"
             Margin="11,10,0,0"
             animations:ItemsReorderAnimation.Duration="00:00:0.5"
-            ItemsSource="{x:Bind ViewModel.OperatorsList, Mode=OneWay}"
             IsItemClickEnabled="True"
             ItemClick="OnItemClick"
-            SelectionMode="None"
-            Loaded="OperatorListGridView_Loaded">
+            ItemsSource="{x:Bind ViewModel.OperatorsList, Mode=OneWay}"
+            Loaded="OperatorListGridView_Loaded"
+            SelectionMode="None">
             <GridView.ItemContainerTransitions>
                 <TransitionCollection>
-                    <ContentThemeTransition />
+                    <EntranceThemeTransition IsStaggeringEnabled="True" />
                 </TransitionCollection>
             </GridView.ItemContainerTransitions>
 
@@ -249,13 +268,16 @@
                             MaxRating="{x:Bind Star}"
                             Style="{StaticResource OperatorRatingControlStyle}"
                             Value="{x:Bind Star}" />
-                        <Image
+                        <controls:ImageEx
                             x:Name="OperatorImage"
                             Grid.Row="1"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             x:Phase="2"
-                            Source="{x:Bind helper:OperatorInfosGetter.GetImage(ImageCodename)}"
+                            DataContext="{x:Bind ImageCodename}"
+                            EnableLazyLoading="True"
+                            IsCacheEnabled="True"
+                            Source="{x:Bind helper:OperatorInfosGetter.GetImage(ImageCodename), Mode=OneWay}"
                             Stretch="Uniform" />
 
                         <Grid Grid.Row="2">
@@ -271,8 +293,8 @@
                                 Height="30"
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Center"
-                                x:Phase="2"
-                                Source="{x:Bind helper:OperatorInfosGetter.GetClassImage(Information[0])}" />
+                                x:Phase="1"
+                                Source="{x:Bind helper:OperatorInfosGetter.GetClassImage(Class)}" />
                         </Grid>
                     </Grid>
                 </DataTemplate>
